--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "csp-js": "workspace:*",
+    "@csp-js/data": "workspace:*",
     "next": "^15.3.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "lucide-react": "^0.468.0",
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -23,6 +27,9 @@
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "eslint": "^9.29.0",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "tailwindcss": "^4.0.0-beta.25",
+    "postcss": "^8.5.6",
+    "autoprefixer": "^10.4.20"
   }
 }
