--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,8 +28,8 @@
     "@types/react-dom": "19.1.1",
     "eslint": "^9.29.0",
     "typescript": "5.8.2",
-    "tailwindcss": "^4.0.0-beta.25",
-    "postcss": "^8.5.6",
-    "autoprefixer": "^10.4.20"
+    "tailwindcss": "^4.0.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "postcss": "^8.5.6"
   }
 }
