--- a/packages/csp-data/package.json
+++ b/packages/csp-data/package.json
@@ -28,7 +28,10 @@
     "dev": "tsup --watch",
     "lint": "eslint . --max-warnings 0",
     "check-types": "tsc --noEmit",
-    "validate": "node scripts/validate-data.js"
+    "validate": "node scripts/validate-data.js",
+    "prepare": "npm run build",
+    "prepack": "npm run build && npm run validate",
+    "prepublishOnly": "npm run lint && npm run check-types"
   },
   "keywords": [
     "csp",
@@ -39,6 +42,24 @@
   ],
   "author": "Eason",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/easonz/csp-js.git",
+    "directory": "packages/csp-data"
+  },
+  "bugs": {
+    "url": "https://github.com/easonz/csp-js/issues"
+  },
+  "homepage": "https://csp-js.dev",
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/easonz"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/",
+    "provenance": true
+  },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
