--- a/packages/csp-cli/package.json
+++ b/packages/csp-cli/package.json
@@ -36,20 +36,20 @@
     "automation",
     "service-updates"
   ],
-  "author": "Eason",
+  "author": "Eason Chang",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/easonz/csp-js.git",
+    "url": "https://github.com/eason-dev/csp-js.git",
     "directory": "packages/csp-cli"
   },
   "bugs": {
-    "url": "https://github.com/easonz/csp-js/issues"
+    "url": "https://github.com/eason-dev/csp-js/issues"
   },
-  "homepage": "https://csp-js.dev",
+  "homepage": "https://csp-js.eason.ch",
   "funding": {
     "type": "github",
-    "url": "https://github.com/sponsors/easonz"
+    "url": "https://github.com/sponsors/eason-dev"
   },
   "publishConfig": {
     "access": "public",
