--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
       - name: Lint code
         run: pnpm lint
@@ -66,7 +66,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        node-version: ['18', '20', '22']
+        # TODO support older node versions
+        node-version: ['22']
     
     steps:
       - name: Checkout code
@@ -83,7 +84,7 @@ jobs:
           version: 10.12.4
 
       - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile --ignore-engines
+        run: pnpm install --frozen-lockfile
 
       - name: Build packages
         run: pnpm build
@@ -112,7 +113,7 @@ jobs:
           version: 10.12.4
 
       - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
       - name: Run security audit
         run: pnpm audit
@@ -141,7 +142,7 @@ jobs:
           version: 10.12.4
 
       - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
       - name: Build packages
         run: pnpm build
@@ -200,7 +201,7 @@ jobs:
           version: 10.12.4
 
       - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
       - name: Build packages
         run: pnpm build
