--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,8 @@ jobs:
   validate-tag:
     name: Validate Release Tag
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     outputs:
       version: ${{ steps.extract.outputs.version }}
       is-prerelease: ${{ steps.extract.outputs.is-prerelease }}
@@ -34,6 +36,8 @@ jobs:
     name: Run Full Test Suite
     runs-on: ubuntu-latest
     needs: validate-tag
+    permissions:
+      contents: read
     
     steps:
       - name: Checkout code
@@ -206,6 +210,8 @@ jobs:
     name: Verify Release
     runs-on: ubuntu-latest
     needs: [validate-tag, build-and-publish]
+    permissions:
+      contents: read
     
     steps:
       - name: Wait for NPM propagation
@@ -252,6 +258,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [validate-tag, verify-release]
     if: always() && needs.build-and-publish.result == 'success'
+    permissions:
+      contents: read
     
     steps:
       - name: Notify Discord (if configured)
