--- a/packages/csp-js/package.json
+++ b/packages/csp-js/package.json
@@ -25,7 +25,7 @@
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "prepare": "npm run build",
-    "prepack": "npm run build && npm run test",
+    "prepack": "npm run build && npm run test -- --run",
     "prepublishOnly": "npm run lint && npm run check-types"
   },
   "keywords": [
@@ -55,8 +55,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/",
-    "provenance": true
+    "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
     "@csp-js/data": "workspace:*"
