--- a/packages/csp-cli/package.json
+++ b/packages/csp-cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@csp-js/cli",
+  "name": "@csp-kit/cli",
   "version": "0.1.0",
   "description": "Command-line tool for managing CSP service definitions and data updates",
   "type": "module",
@@ -57,7 +57,7 @@
     "provenance": true
   },
   "dependencies": {
-    "@csp-js/data": "workspace:*",
+    "@csp-kit/data": "workspace:*",
     "chalk": "^5.3.0",
     "cheerio": "^1.0.0",
     "commander": "^12.0.0",
