Update wrong repo and website url

--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -50,7 +50,7 @@
   "bugs": {
     "url": "https://github.com/eason-dev/csp-kit/issues"
   },
-  "homepage": "https://csp-js.eason.ch",
+  "homepage": "https://csp-kit.eason.ch",
   "funding": {
     "type": "github",
     "url": "https://github.com/sponsors/eason-dev"
