--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,11 +1,11 @@
 blank_issues_enabled: false
 contact_links:
   - name: 💬 Discussions
-    url: https://github.com/eason-dev/csp-js/discussions
+    url: https://github.com/eason-dev/csp-kit/discussions
     about: Ask questions, share ideas, and discuss CSP best practices
   - name: 📖 Documentation
-    url: https://csp-js.eason.ch/docs
+    url: https://csp-kit.eason.ch/docs
     about: Check our comprehensive documentation and guides
   - name: 🔧 CLI Help
-    url: https://github.com/eason-dev/csp-js/blob/main/packages/csp-cli/README.md
+    url: https://github.com/eason-dev/csp-kit/blob/main/packages/csp-cli/README.md
     about: Get help with the CSP CLI tool
