--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -48,7 +48,7 @@
   "bugs": {
     "url": "https://github.com/eason-dev/csp-kit/issues"
   },
-  "homepage": "https://csp-js.eason.ch",
+  "homepage": "https://csp-kit.eason.ch",
   "funding": {
     "type": "github",
     "url": "https://github.com/sponsors/eason-dev"
