Update vercel config

--- a/apps/docs/vercel.json
+++ b/apps/docs/vercel.json
@@ -1,11 +1,5 @@
 {
   "buildCommand": "cd ../.. && pnpm turbo build --filter=docs",
   "outputDirectory": "build",
-  "installCommand": "cd ../.. && pnpm install --frozen-lockfile",
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ]
+  "installCommand": "cd ../.. && pnpm install --frozen-lockfile"
 }
