--- a/apps/docs/vercel.json
+++ b/apps/docs/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd ../.. && pnpm turbo build --filter=docs",
-  "outputDirectory": "../../apps/docs/build",
+  "buildCommand": "cd ../.. && turbo build --filter=docs",
+  "outputDirectory": "build",
   "installCommand": "cd ../.. && pnpm install --frozen-lockfile"
 }
