--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,12 +1,5 @@
 {
-  "buildCommand": "cd ../.. && pnpm turbo build --filter=web",
+  "buildCommand": "cd ../.. && turbo build --filter=web",
   "outputDirectory": ".next",
-  "framework": "nextjs",
-  "installCommand": "cd ../.. && pnpm install --frozen-lockfile",
-  "rewrites": [
-    {
-      "source": "/docs/(.*)",
-      "destination": "https://csp-kit-docs.vercel.app/$1"
-    }
-  ]
+  "installCommand": "cd ../.. && pnpm install --frozen-lockfile"
 }
