--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,5 +1,8 @@
 {
-  "buildCommand": "cd ../.. && turbo build --filter=web",
-  "outputDirectory": ".next",
-  "installCommand": "cd ../.. && pnpm install --frozen-lockfile"
+  "rewrites": [
+    {
+      "source": "/docs/:path*",
+      "destination": "https://csp-kit-docs.vercel.app/:path*"
+    }
+  ]
 }
