--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@csp-kit/data",
   "version": "0.1.0",
-  "description": "Service definitions and CSP mappings database for csp-js",
+  "description": "Service definitions and CSP mappings database for csp-kit",
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
