--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -65,6 +65,7 @@
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.15.3",
     "eslint": "^9.29.0",
+    "jsonc-parser": "^3.2.0",
     "tsup": "^8.0.0",
     "tsx": "^4.19.2",
     "typescript": "5.8.2"
