--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,8 +32,10 @@
     "@repo/ui": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fuse.js": "7.1.0",
     "lucide-react": "^0.468.0",
     "next": "^15.3.0",
+    "next-themes": "0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.0",
