--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,8 @@
     "lint:fix": "next lint --fix --max-warnings 0",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,md,json}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,md,json}\"",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "postbuild": "next-sitemap --config next-sitemap.config.cjs"
   },
   "dependencies": {
     "@csp-kit/data": "workspace:*",
@@ -35,6 +36,8 @@
     "fuse.js": "7.1.0",
     "lucide-react": "^0.468.0",
     "next": "^15.3.0",
+    "next-seo": "6.8.0",
+    "next-sitemap": "4.2.3",
     "next-themes": "0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
