--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@repo/ui": "workspace:*",
+    "@types/react-syntax-highlighter": "15.5.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fuse.js": "7.1.0",
@@ -42,6 +43,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.0",
+    "react-syntax-highlighter": "15.6.1",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.24.1"
   },
